# statfitweb

./: .directory  .gitignore  .gitpod.yml  .pre-commit-config.yaml  .pylintrc  Dockerfile  Pipfile  Procfile  README.md  azure-pipelines.yml  bokeh_models.py  button_callback.js  custom_figure.py  main.py  plot.py  plots.py  pyproject.toml  requeriments.txt  requirements.txt  statfit.py  stats.py  upload_button_callback.js
samples/: data_299.6.txt  data_299.7.txt  data_299.8.txt  data_300.2.txt  data_300.3.txt
