[tool.poetry]
name = "statfit"
version = "0.1.0"
description = "Small python web application for statistical characterization of made with SciPy and Bokeh."
authors = ["Weverton Marques <wevertonms@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
bokeh = "^1.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
